Tidied up teaser on front

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,8 +17,8 @@
     <body>
         <div class="row">
             <div id="main-content" class="twelve columns">
-                <h3>Coming Soon:</h3>
-                <h1>Random Tacos!</h1>
+                <h3 class="light">Coming Soon:</h3>
+                <h1 class="light">Random Tacos!</h1>
             </div>
         </div>
         <script type="application/javascript" src="{{ url_for('static', filename='foundation/javascripts/foundation.min.js') }}"></script>
