Adding credit where credit is due

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,15 @@
     </head>
     <body>
         <div class="row">
-            <div id="taco-content" class="ten columns centered"></div>
+            <div id="taco-content" class="ten columns centered">
+              <h5 class="light">
+                  Have a recipe to contribute? Add it to the
+                  <strong>
+                      <a href="https://github.com/sinker/tacofancy" target="_blank">Taco Fancy Project</a>
+                  </strong>
+                  on Github!
+              </h5>
+            </div>
         </div>
         <script type="application/javascript" src="{{ url_for('static', filename='js/foundation.min.js') }}"></script>
         <script type="application/javascript" src="{{ url_for('static', filename='js/app.js') }}"></script>
