--- a/templates/index.html
+++ b/templates/index.html
@@ -1,45 +1,6 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width">
-
-        <link href="{{ url_for('static', filename='css/foundation.min.css') }}" rel="stylesheet">
-        <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet">
-        <script src="{{ url_for('static', filename='js/modernizr.js') }}"></script>
-    </head>
-    <body>
-        <div class="row">
-            <div id="taco-content" class="ten columns centered">
-              <h5 class="light">
-                  Have a recipe to contribute? Add it to the
-                  <strong>
-                      <a href="https://github.com/sinker/tacofancy" target="_blank">Taco Fancy Project</a>
-                  </strong>
-                  on Github!
-              </h5>
-            </div>
-        </div>
-        <script type="application/javascript" src="{{ url_for('static', filename='js/foundation.min.js') }}"></script>
-        <script type="application/javascript" src="{{ url_for('static', filename='js/app.js') }}"></script>
-        <script type="application/javascript" src="{{ url_for('static', filename='js/ejs_production.js') }}"></script>
-        <script type="application/javascript" src="{{ url_for('static', filename='js/markdown.min.js') }}"></script>
-        <script type="application/javascript" src="{{ url_for('static', filename='js/tacos.js') }}"></script>
-        <script>
-          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-          ga('create', 'UA-45472727-1', 'taco-randomizer.herokuapp.com');
-          ga('send', 'pageview');
-        </script>
-    </body>
-</html>
-
+{% extends "base.html" %}
+{% block javascript %}
+    <script type="application/javascript" src="{{ url_for('static', filename='js/ejs_production.js') }}"></script>
+    <script type="application/javascript" src="{{ url_for('static', filename='js/markdown.min.js') }}"></script>
+    <script type="application/javascript" src="{{ url_for('static', filename='js/tacos.js') }}"></script>
+{% endblock %}
