Added an easy way to nav back to home page

--- a/templates/permalink.html
+++ b/templates/permalink.html
@@ -6,6 +6,7 @@
   {{condiment.name}} <strong>and topped off with </strong>
   {{seasoning.name}}
 </h1>
+<h5 class="light"><a href="/">Get another Taco </a></h5>
 <hr />
 <div class="row">
     <div class="twelve columns recipe">
