corrected Tacofancy name

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
               <h5 class="light">
                   Have a recipe to contribute? Add it to the
                   <strong>
-                      <a href="https://github.com/sinker/tacofancy" target="_blank">Taco Fancy Project</a>
+                      <a href="https://github.com/sinker/tacofancy" target="_blank">Tacofancy Project</a>
                   </strong>
                   on Github!
               </h5>
