Added shells for reals to the front end, too

--- a/static/js/views/taco.ejs
+++ b/static/js/views/taco.ejs
@@ -18,3 +18,8 @@
         <%= markdown.toHTML(seasoning.recipe) %>
     </div>
 </div>
+<div class="row">
+    <div class="twelve columns recipe">
+        <%= markdown.toHTML(shell.recipe) %>
+    </div>
+</div>
